--- a/index.html
+++ b/index.html
@@ -4,9 +4,5 @@
     <title>Guided Flame!</title>
 </head>
 <body>
-    <p>Bruh momento!</p>
-    <img src="https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png">
-    <a title="Guided Flame" href="https://guidedflame.dev" target="_blank">My developer blog</a>
-    <a title="Guided Flame" href="https://guidedflame.dev">My developer blog</a>
-    <a title="Guided Flame" href="https://guidedflame.dev">My developer blog</a>
+    <p>Work in progress</p>
 </body>
