--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The first flame.</title>
     <script src="main.js"></script>
+    <link rel="stylesheet" href="main.css">
 </head>
-<body >
-    
+<body>
+    <div class="landingdiv">
+        <p class="landing">
+            let the first flame embrace you.
+        </p>
+    </div>
 </body>
 </html>
