--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" onclick="sexyfunction()">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The first flame.</title>
-    <script src="main.js"></script>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-    <div class="landingdiv">
-        <p class="landing">
-            let the first flame embrace you.
-        </p>
-    </div>
-</body>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>The first flame.</title>
+		<script src="main.js"></script>
+		<link rel="stylesheet" href="main.css" />
+	</head>
+
+	<body>
+		<div id="landingdiv" class="landingdiv" onclick="sexyfunction()">
+			<p class="landing">let the first flame embrace you.</p>
+		</div>
+		<div id="maindiv" class="maindiv">
+			<p>karo you baka</p>
+		</div>
+	</body>
 </html>
