--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 		<link rel="stylesheet" href="main.css" />
 	</head>
 
-	<body>
+	<body id="body">
 		<div id="landingdiv" class="landingdiv" onclick="sexyfunction()">
-			<p class="landing">let the first flame embrace you.</p>
+			<label class="landing"> LET THE FIRST FLAME EMBRACE YOU. </label>
+			<label class="landingjp"> 最初の火に包まれる</label>
 		</div>
-		<div id="maindiv" class="maindiv">
-			<p>karo you baka</p>
+		<div class="maindivbg" id="maindivbg">
+			<div id="maindiv" class="maindiv">
+				<label>ABOUT ME</label>
+				<label>CONTACT</label>
+				<label>WARMTH.</label>
+			</div>
 		</div>
 	</body>
 </html>
