made text unselectable

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 	<body id="body">
 		<div id="landingdiv" class="landingdiv" onclick="sexyfunction()">
-			<label class="landing"> LET THE FIRST FLAME EMBRACE YOU. </label>
-			<label class="landingjp"> 最初の火に包まれる</label>
+			<label class="landing" id="landing">
+				LET THE FIRST FLAME EMBRACE YOU.
+			</label>
+			<label class="landingjp" id="landingjp">最初の火に包まれる</label>
 		</div>
 		<div class="maindivbg" id="maindivbg">
 			<div id="maindiv" class="maindiv">
