--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
 		</div>
 		<div class="maindivbg" id="maindivbg">
 			<div id="maindiv" class="maindiv">
-				<label>ABOUT ME</label>
-				<label>CONTACT</label>
-				<label>WARMTH.</label>
+				<a class="menuelement" href="#aboutme">ABOUT ME</a>
+				<a class="menuelement" href="#contact">CONTACT</a>
+				<a class="menuelement" href="#sex">WARMTH.</a>
+
+				<div id="bio" class="bio">
+					<a href="#main" class="closebutton">back</a>
+					<div id="bioflex">
+						<p class="half1">I'm sharanoth. Send thighs.</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
