aboutme and contact sections ready

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>The first flame.</title>
-		<script src="main.js"></script>
+		<title>the shrine.</title>
+
 		<link rel="stylesheet" href="main.css" />
 	</head>
 
@@ -16,19 +16,40 @@
 			</label>
 			<label class="landingjp" id="landingjp">最初の火に包まれる</label>
 		</div>
-		<div class="maindivbg" id="maindivbg">
-			<div id="maindiv" class="maindiv">
-				<a class="menuelement" href="#aboutme">ABOUT ME</a>
-				<a class="menuelement" href="#contact">CONTACT</a>
-				<a class="menuelement" href="#sex">WARMTH.</a>
+		<div class="maindivbg" id="maindivbg"></div>
 
-				<div id="bio" class="bio">
-					<a href="#main" class="closebutton">back</a>
-					<div id="bioflex">
-						<p class="half1">I'm sharanoth. Send thighs.</p>
-					</div>
-				</div>
+		<div id="maindiv" class="maindiv">
+			<a class="menuelement" href="#aboutme">ABOUT ME</a>
+			<a class="menuelement" href="#contact">CONTACT</a>
+			<a id="coldness" class="menuelement" href="#coldness"
+				>LET THERE BE COLD</a
+			>
+		</div>
+		<a href="#main" class="closebutton" id="closebutton">back</a>
+		<div id="bio" class="bio">
+			<div>
+				<p class="firsthalf">
+					I'm sharanoth.<br />
+					21 | m<br />
+					your interest in me is highly appreciated.<br />
+				</p>
+				<p>
+					you may call me shara if my name is too daunting to
+					pronounce or spell.
+				</p>
+				<p>
+					i'm more than happy to provide company or advice, but please
+					don't expect my friendship. i do not trust strangers easily.
+				</p>
 			</div>
 		</div>
+		<div id="contact" class="bio">
+			<ul>
+				<li>sharanoth#0001</li>
+				<li>sharanoth@guidedflame.dev</li>
+				<li>sharanoth@gmail.com</li>
+			</ul>
+		</div>
 	</body>
+	<script src="main.js"></script>
 </html>
