fix bg on mobile

--- a/index.html
+++ b/index.html
@@ -27,21 +27,19 @@
 		</div>
 
 		<div id="bio" class="bio">
-			<div>
-				<p class="firsthalf">
-					I'm sharanoth.<br />
-					21 | m<br />
-					your interest in me is highly appreciated.<br />
-				</p>
-				<p>
-					you may call me shara if my name is too daunting to
-					pronounce or spell.
-				</p>
-				<p>
-					i'm more than happy to provide company or advice, but please
-					don't expect my friendship. i do not trust strangers easily.
-				</p>
-			</div>
+			<p class="firsthalf">
+				I'm sharanoth.<br />
+				21 | m<br />
+				your interest in me is highly appreciated.<br />
+			</p>
+			<p>
+				you may call me shara if my name is too daunting to pronounce or
+				spell.
+			</p>
+			<p>
+				i'm more than happy to provide company or advice, but please
+				don't expect my friendship. i do not trust strangers easily.
+			</p>
 		</div>
 		<div id="contact" class="bio">
 			<ul>
