fixed elements not staying in place in mobile browser

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no"
+		/>
 		<title>the shrine.</title>
 
 		<link rel="stylesheet" href="main.css" />
@@ -25,7 +28,13 @@
 				>LET THERE BE COLD</a
 			>
 		</div>
-
+		<div id="contact" class="bio">
+			<ul>
+				<li>sharanoth#0001</li>
+				<li>sharanoth@guidedflame.dev</li>
+				<li>sharanoth@gmail.com</li>
+			</ul>
+		</div>
 		<div id="bio" class="bio">
 			<div>
 				<p class="firsthalf">
@@ -43,14 +52,13 @@
 				</p>
 			</div>
 		</div>
-		<div id="contact" class="bio">
-			<ul>
-				<li>sharanoth#0001</li>
-				<li>sharanoth@guidedflame.dev</li>
-				<li>sharanoth@gmail.com</li>
-			</ul>
-		</div>
+
 		<a href="#main" class="closebutton" id="closebutton">back</a>
 	</body>
 	<script src="main.js"></script>
+	<script>
+		function scrollWin() {
+			window.scrollTo(0, 0);
+		}
+	</script>
 </html>
