added firefox support

--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
 		<div id="maindiv" class="maindiv">
 			<a class="menuelement" href="#aboutme">ABOUT ME</a>
 			<a class="menuelement" href="#contact">CONTACT</a>
-			<a id="coldness" class="menuelement" href="#coldness"
-				>LET THERE BE COLD</a
-			>
+			<a class="menuelement" href="#coldness">LET THERE BE COLD</a>
 		</div>
-		<div id="contact" class="bio">
+		<div id="contactdiv" class="bio">
 			<ul>
 				<li>sharanoth#0001</li>
 				<li>sharanoth@guidedflame.dev</li>
