--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no"
 		/>
+		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<title>the shrine.</title>
 
 		<link rel="stylesheet" href="main.css" />
