--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<label class="landing" id="landing">
 				LET THE FIRST FLAME EMBRACE YOU.
 			</label>
-			<label class="landingjp" id="landingjp">最初の火に包まれる</label>
+			<label class="landingjp" id="landingjp">最初の火に包まれる.</label>
 		</div>
 		<div class="maindivbg" id="maindivbg"></div>
 
@@ -35,13 +35,7 @@
 			</ul>
 		</div>
 		<div id="bio" class="bio">
-			<div>
-				I'm <f></f>sharanoth.<br />
-				21 | m<br />
-				your interest in me is highly appreciated.<br />
-				you may call me shara if my name is too daunting to pronounce or
-				spell.
-			</div>
+			<div class="bioname">... (wip!!!)</div>
 		</div>
 
 		<a href="#main" class="closebutton" id="closebutton">back</a>
