--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 			</ul>
 		</div>
 		<div id="bio" class="bio">
-			<script defer src="https://cdn.commento.io/js/commento.js"></script>
-			<div id="commento"></div>
+			<div class="bioname">... (wip!!!)</div>
 		</div>
 
 		<a href="#main" class="closebutton" id="closebutton">back</a>
